--- a/views/admin/view-users.ejs
+++ b/views/admin/view-users.ejs
@@ -103,8 +103,6 @@
   </aside>
   <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg ">
     
-
-
 <!-- endSaidNavBar -->
 
 <div class="container-fluid py-4">
@@ -273,7 +271,7 @@
               ) {
                 successAlert.fire({
                   title: "Cancelled",
-                  text: "User safe :)",
+                  text: "User safe :",
                   icon: "error",
                 });
             }
