--- a/views/users/checkout.ejs
+++ b/views/users/checkout.ejs
@@ -175,7 +175,7 @@
                         <% products.forEach((data)=>{%>
                         <div class="order-col">
                             <div><%=data.productId.name %></div>
-                            <div><%=data.productId.price%></div>
+                            <div>₹ <%=data.productId.price%></div>
                         </div>
                         <%})%>
                     </div>
@@ -189,14 +189,14 @@
                             <input type="checkbox" id="coupon-details" onchange="toggleCouponInput()">
                             <label for="coupon-details">
                                 <span></span>
-                                Enter your code below.
+                                Click here.
                             </label>
                             <div class="caption" id="couponInputContainer" style="display: none;">
                                 <div class="form-group">
                                     <input class="input" type="text" id="code" name="code" placeholder="Enter your coupon">
                                 </div>
-                                <button id="apply" class="btn btn-primary" onclick="applyCoupon()">Apply</button>
-                                <button id="unApply" class="btn btn-danger" onclick="unApplyCoupon()">Unapply</button>
+                                <button id="apply" type="button" class="btn btn-primary" onclick="applyCoupon($('#code').val())">Apply</button>
+                                <button id="unApply" type="button" class="btn btn-danger" onclick="unApplyCoupon($('#code').val())" style="display: none;">Unapply</button>
                             </div>
                         </div>
                     </div>
@@ -206,10 +206,16 @@
                         <div>Shiping</div>
                         <div><strong>FREE</strong></div>
                     </div>
+
+                    <!-- coupon discount -->
+                    <div class="order-col">
+                        <div>Coupon Discount</div>
+                        <div>₹<span id="couponDiscount">0</span></div>
+                    </div>
                     
                     <div class="order-col">
                         <div><strong>TOTAL</strong></div>
-                        <div><strong class="order-total" id="total"><%=total%></strong></div>
+                        <div><strong class="order-total" id="total">₹ <%=total%></strong></div>
                     </div>
                 <div class="payment-method">
                     <h5>Payment Method</h5>
@@ -327,7 +333,7 @@
       image: '/images/my_Logo.png',
       order_id: order.id,
       handler: function (response) {
-        verifyPaymetn(response, order);
+        verifyPayment(response, order);
         console.log(response);
       },
       prefill: {
@@ -346,10 +352,44 @@
     var razorpayInstance = new Razorpay(options);
     razorpayInstance.open();
   }
+
+  function verifyPayment(payment, order){
+    const amount = document.getElementById('total').innerHTML;
+    $.ajax({
+        url:'verifyPayment',
+        method:'post',
+        data:{
+            payment:payment,
+            amount:amount,
+            order:order
+        },
+        success:(response)=>{
+            if(response.codsuccess==true){
+                location.href= `/orderPlaced/${response.orderid}`;
+
+            }else{
+                Swal.fire({
+                    position:'center',
+                    icon:'error',
+                    title:'Payment Failed',
+                    showConfirmButton:'false',
+                    timer:1500,
+                });
+            }
+        },
+        error:(xhr, status, error)=>{
+            console.error("AJAX request failed:", status, error);
+        },
+    })
+  }
 </script>
 
 
+
 <script>
+    
+    // toggleCouponInput
+
     function toggleCouponInput() {
         var couponInputContainer = document.getElementById('couponInputContainer');
         var checkbox = document.getElementById('coupon-details');
@@ -359,15 +399,92 @@
         } else {
             couponInputContainer.style.display = 'none';
         }
-    }
+    };
 
-    function applyCoupon() {
+    // end toggleCouponInput
+
+    function applyCoupon(code) {
         // Implement your apply coupon logic here
-    }
+        const amount = document.getElementById('total').innerHTML;
+        console.log('amount',amount);
 
-    function unApplyCoupon() {
-        // Implement your unapply coupon logic here
-    }
+        $.ajax({
+            url:'/couponApply',
+            data:{
+                code:code,
+                amount:amount,
+            },
+            method:'post',
+            success:(response)=>{
+                console.log('response',response);
+                if(response.user){
+                    Swal.fire({
+                        icon:'error',
+                        title:'Oops !!',
+                        text:'This coupon already used !',
+                    })
+                }else if(response.cartAmount){
+                    Swal.fire({
+                        icon:'warning',
+                        title:'Oops !!',
+                        text:'You can\'t use the coupon ...! Buy more'
+                    })
+                }else if(response.amountOkey){
+                    console.log('Amound Okey',response);
+
+                    document.getElementById('total').innerHTML=response.disTotal
+                    document.getElementById('couponDiscount').innerHTML=response.disAmount
+                    document.getElementById('apply').style.display='none'
+                    document.getElementById('unApply').style.display=''
+
+                    Swal.fire({
+                        position:'center',
+                        icon:'success',
+                        title:'Discount redeemed',
+                        showConfirmButton:false,
+                        timer:1500
+                    })
+                }else{
+                    Swal.fire({
+                        icon:'erroe',
+                        title:'Oops !!',
+                        text:'Invalid Coupon !!'
+                    })
+                }
+            }
+
+        })
+
+    };
+
+    function unApplyCoupon(code) {
+        const amount=document.getElementById('total').innerHTML;
+        document.getElementById('couponDiscount').innerHTML
+
+        $.ajax({
+            url:'deleteCoupon',
+            data:{code:code, amount:amount},
+            method:'post',
+            success:(response)=>{
+                if(response.success){
+                    document.getElementById('total').innerHTML=response.disTotal
+                    document.getElementById('couponDiscount').innerHTML=0;
+
+                    document.getElementById('apply').style.display='block'
+                    document.getElementById('unApply').style.display='none'
+
+                    Swal.fire({
+                        icon:'warning',
+                        title:'Deleted !!',
+                        text:'Applied coupon is deleted'
+                    })
+                }
+            }
+        })
+    };
+
+
+
 </script>
 
 
