--- a/views/users/orderDetails.ejs
+++ b/views/users/orderDetails.ejs
@@ -175,7 +175,7 @@ rel="stylesheet"
                     </tr>
                     <tr>
                       <td colspan="3">Discount Coupon</td>
-                      <td class="text-danger text-end" style="text-align: end;">-₹00.00</td>
+                      <td class="text-danger text-end" style="text-align: end;">-₹ <%=orders.discount%></td>
                     </tr>
                     <tr class="fw-bold" style="font-weight: bold;">
                       <td colspan="3">TOTAL</td>
