--- a/views/admin/adminHome.ejs
+++ b/views/admin/adminHome.ejs
@@ -4,7 +4,7 @@
 <%- include('../admin/adminLayout/navbar.ejs')%>
 
 
-  <!-- saideNaveBar -->
+<!-- saideNaveBar -->
 
 
 <body class="g-sidenav-show  bg-gray-200">
@@ -17,7 +17,7 @@
       </a>
     </div>
     <hr class="horizontal light mt-0 mb-2">
-    <!-- <div class="collapse navbar-collapse  w-auto  max-height-vh-100" id="sidenav-collapse-main"> -->
+    <div class="collapse navbar-collapse  w-auto  max-height-vh-100" id="sidenav-collapse-main">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link text-white active bg-gradient-primary" href="/admin/adminHome">
@@ -68,6 +68,22 @@
             <span class="nav-link-text ms-1">Orders</span>
           </a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link text-white " href="/admin/view-coupon">
+            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+              <i class="material-icons opacity-10">redeem</i>
+            </div>
+            <span class="nav-link-text ms-1">Coupon</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white " href="/admin/view-wallet">
+            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+              <i class="material-icons opacity-10">account_balance_wallet</i>
+            </div>
+            <span class="nav-link-text ms-1">Wallet</span>
+          </a>
+        </li>
         <li class="nav-item mt-3">
           <h6 class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8">Account pages</h6>
         </li>
@@ -96,7 +112,7 @@
           </a>
         </li> -->
       </ul>
-    <!-- </div> -->
+    </div>
     <!-- <div class="sidenav-footer position-absolute w-100 bottom-0 ">
       <div class="mx-3">
         <a class="btn bg-gradient-primary mt-4 w-100" href="https://www.creative-tim.com/product/material-dashboard-pro?ref=sidebarfree" type="button">Upgrade to pro</a>
@@ -106,6 +122,8 @@
   <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg ">
     
 <!-- endSaidNavBar -->
+
+
   <div class="container-fluid py-4">
     <div class="row">
       <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
