--- a/views/users/orderPlaced.ejs
+++ b/views/users/orderPlaced.ejs
@@ -25,16 +25,9 @@
   <div class="container" style="margin-top: 100px; margin-bottom: 100px;">
     <div class="row mt-5 mb-5">
       <div class="col-md-12 text-center pt-5">
-        <span class="d-flex justify-content-center">
-          <dotlottie-player
-            src="https://lottie.host/59ba5ff8-4a81-4cc9-b2dd-3d8a10a11617/jaGRynaRuK.json"
-            background="transparent"
-            speed="1"
-            style="width: 300px; height: 300px;"
-            loop
-            autoplay
-          ></dotlottie-player>
-        </span>
+        <!-- <span class="d-flex justify-content-center"> -->
+        <img src="/images/Gif/Animation - 1703047414602.gif" alt="">
+        <!-- </span> -->
         <h3 class="text-black">Thank you!</h3>
         <% if(user){%>
         <h5 class="text-success" style="text-transform: uppercase;">
