--- a/views/users/changePassword.ejs
+++ b/views/users/changePassword.ejs
@@ -5,6 +5,10 @@
     border-radius: 5px;
     font-size: medium;
   }
+
+  input[type=password]{
+    background-color: rgb(228, 231, 231);
+  }
 </style>
 
 <!-- NEWSLETTER -->
@@ -24,19 +28,19 @@
             <div>
             <div class="row">
             <form form action="/changePassword" method="post" id="changePasswordForm" onsubmit="changePassword(); return false;">
-                <div class="col-sm-12" style="padding: 15px;">
+                <div class="col-sm-12" style="padding: 15px; display: flex; justify-content: space-around;">
                     <label>Current Password</label>
                     <input class="input" type="password" name="currentpassword" placeholder="Enter Current Password">
                   </div>
                   <span id="error-currentpassword" style="color: red;"></span>
 
-                  <div class="col-sm-12" style="padding: 15px;">
+                  <div class="col-sm-12" style="padding: 15px; display: flex; justify-content: space-around;">
                     <label>New Password</label>
                     <input class="input" type="password" name="newpassword" placeholder="Enter Your New Password" required>
                     <span id="error-newpassword" style="color: red;"></span>
                 </div>
 
-                <div class="col-sm-12" style="padding: 15px;">
+                <div class="col-sm-12" style="padding: 15px; ">
                     <label>Confirm Password</label>
                     <input class="input" type="password" name="confirmpassword" placeholder="Enter Your Confirm Password">
                     <span id="error-confirmpassword" style="color: red;"></span>
