--- a/views/users/addAddress.ejs
+++ b/views/users/addAddress.ejs
@@ -173,47 +173,50 @@
                                             <!-- Name Input -->
                                             <div class="mb-3">
                                                 <label for="name" class="form-label">Name:</label>
-                                                <input type="text" class="form-control" id="FullName" name="fullName" required>
+                                                <input type="text" class="form-control" id="FullName" name="fullName">
                                                 <span class="error-message text-danger" id="fullNameError"></span>
                                             </div>
                     
                                             <!-- Mobile Input -->
                                             <div class="mb-3">
                                                 <label for="mobile" class="form-label">Mobile:</label>
-                                                <input type="tel" class="form-control" id="mobile" name="mobile" required>
+                                                <input type="tel" class="form-control" id="mobile" name="mobile">
                                                 <span class="error-message text-danger" id="phoneError"></span>
                                             </div>
 
                                             <!-- City Input -->
                                             <div class="mb-3">
                                                 <label for="city" class="form-label">City:</label>
-                                                <input type="text" class="form-control" id="city" name="city" required>
+                                                <input type="text" class="form-control" id="city" name="city">
                                                 <span class="error-message text-danger" id="cityError"></span>
                                             </div>
 
                                             <!-- State Input -->
                                             <div class="mb-3">
                                                 <label for="state" class="form-label">State:</label>
-                                                <input type="text" class="form-control" id="state" name="state" required>
+                                                <input type="text" class="form-control" id="state" name="state">
                                                 <span class="error-message text-danger" id="stateError"></span>
                                             </div>
 
                                             <!-- State Input -->
                                             <div class="mb-3">
                                                 <label for="country" class="form-label">Country:</label>
-                                                <input type="text" class="form-control" id="country" name="country" required>
+                                                <input type="text" class="form-control" id="country" name="country">
                                                 <span class="error-message text-danger" id="countryError"></span>
                                             </div>
                     
                                             <!-- Pincode Input -->
                                             <div class="mb-3">
                                                 <label for="pincode" class="form-label">Pincode:</label>
-                                                <input type="text" class="form-control" id="pinCode" name="pincode" required>
+                                                <input type="text" class="form-control" id="pinCode" name="pincode">
                                                 <span class="error-message text-danger" id="pinCodeError"></span>
                                             </div>
 
                                             <!-- Submit Button -->
-                                            <button type="submit" class="btn btn-danger" style="width: 100%;">Submit</button>
+                                            <div class="d-flex justify-content-between" style="display: flex; justify-content: space-around;">
+                                            <button type="submit" class="btn btn-primary" style="width: 30%;">Submit</button>
+                                            <button type="button" class="btn btn-danger" style="width: 30%;" onclick="cancelAction()">Cancel</button>
+                                          </div>
                                         </form>
                                     </div>
                                 </div>
@@ -309,6 +312,14 @@
   
           return true; // Form is valid
       }
+
+          // function Cancel Button  
+    function cancelAction() {
+        
+        // document.getElementById("editAddress").reset();
+        window.history.back(); 
+    }
+
   </script>
   
 
