--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -147,7 +147,7 @@
                 class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
               >
                 <h5 class="mb-0">
-                    <div class='fas fa-shopping-bag'></div><a href="/orders"> My Orders</a>
+                    <div class='fas fa-shopping-bag '></div><a href="/orders"> My Orders</a>
                 </h5>
                 <!-- <span class="text-secondary">https://bootdey.com</span> -->
               </li>
@@ -159,6 +159,14 @@
           </h5>
               <!-- <span class="text-secondary">bootdey</span> -->
             </li>
+            <li
+            class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
+          >
+          <h5 class="mb-0">
+            <div class='fa-solid fa-wallet'></div><a href="#"> My Wallet</a>
+        </h5>
+            <!-- <span class="text-secondary">bootdey</span> -->
+          </li>
               <li
                 class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
               >
